# dataconv

./: .gitignore  README.md  main.py  old_main.py  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  grammar.py  io.py  parser.py  processor.py  validation.py
test/: cli_test.py  grammar_test.py  io_test.py  parser_test.py  processor_test.py  validation_test.py
